# coursework-databases

./: 404.html  README.md  index.html  package.json  publish.sh  pyproject.toml  service-worker.js
assets/js/: 30.88ceaeed.js  31.f279d32b.js  33.543de3e9.js  37.29505496.js  38.32b57960.js  app.39dca24e.js
conclusion/: index.html
design/: index.html
docs/: README.md
docs/conclusion/: README.md
docs/intro/: README.md
docs/software/: README.md
docs/test/: README.md
intro/: index.html
requirements/: index.html  stakeholders-needs.html  state-of-the-art.html
software/: index.html
src/py/: db.py  main.py  models.py  router.py
test/: index.html
use cases/: index.html
